--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
           </div>
         </div>
       </main>
+
+
+<!-- fine -->
+
       <footer>
         <span><i>realizzato da me </i></span>
         <hr>
